--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	
 	<p id="demo_1"></p>
 	<button id="demo_2" onclick="loadDoc()">Request Information</button>
-	<p id="demo_3"></p>
+	<table id="demo_3"></table>
 
 <script src="testSite.js"></script>
 </body>
