Link for stylesheet

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="description" content="This is just a test field for potential features. Not to be taken seriously.">
 	<meta name="author" content="Oneil Achord">
+	<link rel="stylesheet" href="testStyles.css">
 </head>
 
 <body>
