--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<title>Test WebSite</title>
+	<link rel="icon" type="image/x-icon" href="https://github.com/OneilNvM/OneilNvM.github.io/blob/3acca717100d761510e97f5151746107ee5d600d/clint%20pog.png">
 	<meta charset="utf-8">
 	<meta name="description" content="This is just a test field for potential features. Not to be taken seriously.">
 	<meta name="author" content="Oneil Achord">
