--- a/index.html
+++ b/index.html
@@ -1,22 +1,9 @@
-<!DOCTYPE html5>
+<!DOCTYPE html>
 <html>
-
-<head>
-	<title>Test WebSite</title>
-	<link rel="icon" type="image/x-icon" href="clint%20pog.png">
-	<meta charset="utf-8">
-	<meta name="description" content="This is just a test field for potential features. Not to be taken seriously.">
-	<meta name="author" content="Oneil Achord">
-	<link rel="stylesheet" href="testStyles.css">
-</head>
-
-<body>
-
-	<p id="demo_1"></p>
-	<button id="demo_2" onclick="loadDoc()">Request Information</button>
-	<table id="demo_3"></table>
-
-	<script src="testSite.js"></script>
-</body>
-
+    <head>
+        <title>Image Request Test</title>
+    </head>
+    <body>
+        
+    </body>
 </html>
