--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<table id="demo_3"></table>
 
 	<script src="testSite.js"></script>
+	<script src="imageRequest.js"></script>
 </body>
 
 </html>
